introduces kafka to send ticket create events

--- a/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
@@ -9,3 +9,5 @@ common.client.typeMismatch=8;{0} parametre tipi uyumsuz.
 common.client.methodNotSupported=9;Method desteklenmiyor.
 
 ticketapi.payment.emptyResponse=11;Payment apiden cevap alınamıyor
+ticketapi.payment.client.error=12;Ödeme başarısız oldu
+ticketapi.event.notFound=13;Etkinlik bulunamadı
