--- a/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
@@ -9,3 +9,5 @@ common.client.typeMismatch=8;{0} parameter type mismatch.
 common.client.methodNotSupported=9;Method not supported
 
 ticketapi.payment.emptyResponse=11;Unable to get body from payment api response
+ticketapi.payment.client.error=12;Payment failed due to errors
+ticketapi.event.notFound=13;Event not found
