moves flow tests to domain from infra

--- a/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
@@ -10,4 +10,5 @@ common.client.methodNotSupported=9;Method not supported
 
 ticketapi.payment.emptyResponse=11;Unable to get body from payment api response
 ticketapi.payment.client.error=12;Payment failed due to errors
-ticketapi.event.notFound=13;Event not found
+ticketapi.meetup.notFound=13;Event not found
+ticketapi.ticket.cannotBeCreated=14;Ticket cannot be created
