--- a/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
@@ -10,4 +10,5 @@ common.client.methodNotSupported=9;Method desteklenmiyor.
 
 ticketapi.payment.emptyResponse=11;Payment apiden cevap alınamıyor
 ticketapi.payment.client.error=12;Ödeme başarısız oldu
-ticketapi.event.notFound=13;Etkinlik bulunamadı
+ticketapi.meetup.notFound=13;Etkinlik bulunamadı
+ticketapi.ticket.cannotBeCreated=14;Bilet kaydedilemedi
