adds acceptance test suite

--- a/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_en.properties
@@ -12,3 +12,4 @@ ticketapi.payment.emptyResponse=11;Unable to get body from payment api response
 ticketapi.payment.client.error=12;Payment failed due to errors
 ticketapi.meetup.notFound=13;Event not found
 ticketapi.ticket.cannotBeCreated=14;Ticket cannot be created
+ticketapi.meetup.cannotCreate=15;Meetup cannot be created
