--- a/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
+++ b/ticket-api/infra/src/main/resources/i18n/ticket_tr.properties
@@ -12,3 +12,4 @@ ticketapi.payment.emptyResponse=11;Payment apiden cevap alınamıyor
 ticketapi.payment.client.error=12;Ödeme başarısız oldu
 ticketapi.meetup.notFound=13;Etkinlik bulunamadı
 ticketapi.ticket.cannotBeCreated=14;Bilet kaydedilemedi
+ticketapi.meetup.cannotCreate=15;Etkinlik oluşturulamadı
