adds additional tests

--- a/payment-api/infra/src/main/resources/i18n/payment_en.properties
+++ b/payment-api/infra/src/main/resources/i18n/payment_en.properties
@@ -13,5 +13,5 @@ paymentapi.balance.notFound=11;Balance is not found
 paymentapi.balance.notSufficient=12;Balance is not sufficient
 
 paymentapi.account.lockFailed=13;Account is already locked by another process
-paymentapi.payment.notRollbackable;14;Payment is not allowed to rollback
+paymentapi.payment.notRollbackable=14;Payment is not allowed to rollback
 paymentapi.payment.notFound=15;Payment is not found
