--- a/payment-api/infra/src/main/resources/i18n/payment_tr.properties
+++ b/payment-api/infra/src/main/resources/i18n/payment_tr.properties
@@ -13,5 +13,5 @@ paymentapi.balance.notFound=11;Sistemde tanımlı bakiye bulunamadı
 paymentapi.balance.notSufficient=12;Bakiye yetersiz
 
 paymentapi.account.lockFailed=13;Hesap başka bir işlem tarafından kilitlenmiş durumda
-paymentapi.payment.notRollbackable;14;Ödeme geri alınamaz
+paymentapi.payment.notRollbackable=14;Ödeme geri alınamaz
 paymentapi.payment.notFound=15;Ödeme bulunamadı
